--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Delicacy Kitchen</title>
-    <link rel="stylesheet" href="styles/style2.css">
+    <link rel="stylesheet" href="../styles/about.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -13,7 +13,7 @@
     <header>
         <nav id="head-nav">
             <section class="brand">
-                <img src="d.jpeg" alt="">
+                <img src="../d.jpeg" alt="">
                 <h1> 
                   Delicacy kitchen
                 </h1>
@@ -22,34 +22,29 @@
                 </h3>
             </section>
             <section class="topnav">
-                <a href="#home" class="active">Home</a>
+                <a href="#home">Home</a>
                 <a href="./pages/manu-page.html">Menu</a>
                 <a href="./pages/booking-page.html">Booking</a>
                 <a href="#contact">Contact</a>
-                <a href="./pages/about.html">About</a>
+                <a href="./pages/about.html" class="active">About</a>
             </section>   
         </nav>
     </header>
     <!-- <main> -->
         <div class="main"><br><br>
-          <h1>WELCOME TO DELICACY KITCHEN</h1>
-          <p>We prepare and serve food and drinks to customers. Meals are generally served and eaten on the premises, but we also offer take-out and and dine-in. We include a wide variety of cuisines and services ranging from inexpensive fast-food to mid-priced, to high-priced luxury.</p>
-          <br><br> 
-          <div class="row">
-            <div class="column">
-              <img src="homeimage2.jpeg" alt="Snow" style="width:100%; height: 280px;">
+          <h3>About us</h3>
+          <h1>Delicacy kitchen run by three master pieces of India. They started their journey in 2004 and now they give tough compitition to other restaurant out there in Toronto.</h1>
+           <div class="btn"> 
+                <button>Read more</button>
+           </div> 
+            <div class="main1">
+                <h3>About Restaurant</h3>
+                <h1>Address : 59 hayden street, Toronto, Ontario.</h1><br>
+                <h1>Opening hours: 11:00 am to 10:00 pm</h1>
+                <map></map>
             </div>
-            <div class="column">
-              <img src="homeimage3.jpeg" alt="Forest" style="width:100%; height: 280px;">
-            </div>
-            <div class="column">
-              <img src="homeimage4.jpeg" alt="Mountains" style="width:100%; height: 280px;">
-            </div>
-            <div class="column">
-              <img src="homeimage5.jpeg" alt="Mountains" style="width:100%; height: 280px;">
-            </div>
-          </div>
         </div>
+
     <!-- </main> -->
 <footer>
     Delicacycopyright@2022
