--- a/pages/about.html
+++ b/pages/about.html
@@ -32,15 +32,16 @@
     </header>
     <!-- <main> -->
         <div class="main"><br><br>
-          <h3>About us</h3>
+          <h3 class="about1">About us</h3>
           <h1>Delicacy kitchen run by three master pieces of India. They started their journey in 2004 and now they give tough compitition to other restaurant out there in Toronto.</h1>
            <div class="btn"> 
                 <button>Read more</button>
            </div> 
             <div class="main1">
-                <h3>About Restaurant</h3>
+                <h3 class="about2">About Restaurant</h3>
                 <h1>Address : 59 hayden street, Toronto, Ontario.</h1><br>
-                <h1>Opening hours: 11:00 am to 10:00 pm</h1>
+                <h1 class="opn1">Opening hours of Every Day Of the Week : 11:00 am</h1>
+                <h1 class="cls1">Closing hours of Every Day Of the Week : 10:00 pm</h1>
                 <map></map>
             </div>
         </div>
