--- a/pages/manu-page.html
+++ b/pages/manu-page.html
@@ -12,18 +12,24 @@
   </head>
   <body>
     <header>
-        <nav id="head-nav">
-            <section class="brand">
-                Brand
-            </section>
-            <section class="topnav">
-                <a href="#home">Home</a>
-                <a href="#news">Manu</a>
-                <a href="#contact">Contact</a>
-                <a href="./booking-page.html">Booking</a>
-                <a href="#about">About</a>
-              </section>   
-        </nav>
+      <nav id="head-nav">
+          <section class="brand">
+              <img src="d.jpeg" alt="">
+              <h1> 
+                Delicacy kitchen
+              </h1>
+              <h3>
+                We serve what you deserve
+              </h3>
+          </section>
+          <section class="topnav">
+              <a href="#home" class="active">Home</a>
+              <a href="./pages/manu-page.html">Menu</a>
+              <a href="./pages/booking-page.html">Booking</a>
+              <a href="#contact">Contact</a>
+              <a href="./pages/about.html">About</a>
+          </section>   
+      </nav>
     </header>
     <!-- <main> -->
         <div class="main">
@@ -93,8 +99,8 @@
               </div>
         </div>
     <!-- </main> -->
-<footer>
-    Foooter
-</footer>
+    <footer>
+      Delicacycopyright@2022
+    </footer>
   </body>
 </html>
