--- a/pages/about.html
+++ b/pages/about.html
@@ -22,11 +22,11 @@
                 </h3>
             </section>
             <section class="topnav">
-                <a href="#home">Home</a>
-                <a href="./pages/manu-page.html">Menu</a>
-                <a href="./pages/booking-page.html">Booking</a>
-                <a href="#contact">Contact</a>
-                <a href="./pages/about.html" class="active">About</a>
+                <a href="../index.html">Home</a>
+                <a href="./manu-page.html">Menu</a>
+                <a href="./booking-page.html">Booking</a>
+                <a href="./feedback.html">Feebacks</a>
+                <a href="./about.html" class="active">About</a>
             </section>   
         </nav>
     </header>
