--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -26,23 +26,19 @@
               <a href="../index.html" class="active">Home</a>
               <a href="./manu-page.html">Menu</a>
               <a href="./booking-page.html">Booking</a>
-              <a href="./feedback.html">Feebacks</a>
+              <a href="#contact">Contact</a>
               <a href="./about.html">About</a>
           </section>   
       </nav>
     </header>
     <!-- <main> -->
         <div class="main">
-            <p>Thank you for Booking with us!</p>
-            <p> We will reach out to you </p>
-            <iframe class="location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.958857423098!2d-79.38599358482604!3d43.669825479120675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3517c0b3021f%3A0xf230b6fbcc847026!2sHumber%20International%20Graduate%20School!5e0!3m2!1sen!2sca!4v1658681383528!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <br><br>
-            <h3 class="desc"> This is the Location of Delicacy Kitchen </h3>
-            <br><br>
-            <p class="bc1"> Here, you will get the best Delicacy of the food.</p>
-            <br><br>
-            <p class="bc2"> You will reach to us Again to taste the same taste again.</p>
-
+            <form action="#">
+                <label for="feedback">feedback</label><br>
+                <textarea   id="feedback" name="feedback">
+              </textarea>
+                <input type="submit" value="Submit">
+              </form>
   
         </div>
     <!-- </main> -->
