--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 </h3>
             </section>
             <section class="topnav">
-                <a href="#home" class="active">Home</a>
+                <a href="./index.html" class="active">Home</a>
                 <a href="./pages/manu-page.html">Menu</a>
                 <a href="./pages/booking-page.html">Booking</a>
-                <a href="#contact">Contact</a>
+                <a href="./pages/feedback.html">Feebacks</a>
                 <a href="./pages/about.html">About</a>
             </section>   
         </nav>
