--- a/pages/booking-page.html
+++ b/pages/booking-page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Spicy Lounge</title>
+    <title>Delicacy kitchen</title>
     <link rel="stylesheet" href="../styles/style2.css">
     <link rel="stylesheet" href="../styles/booking-page-style.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -23,11 +23,11 @@
               </h3>
           </section>
           <section class="topnav">
-              <a href="#home" class="active">Home</a>
-              <a href="./pages/manu-page.html">Menu</a>
-              <a href="./pages/booking-page.html">Booking</a>
-              <a href="#contact">Contact</a>
-              <a href="./pages/about.html">About</a>
+              <a href="../index.html" class="active">Home</a>
+              <a href="./manu-page.html">Menu</a>
+              <a href="./booking-page.html">Booking</a>
+              <a href="./feedback.html">Feebacks</a>
+              <a href="./about.html">About</a>
           </section>   
       </nav>
   </header>
