add js part in booking and feed bask module

--- a/pages/booking-confirmation.html
+++ b/pages/booking-confirmation.html
@@ -1,53 +1,90 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Delicacy kitchen</title>
-    <link rel="stylesheet" href="../styles/style2.css">
-    <link rel="stylesheet" href="../styles/booking-conformation.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <header>
-      <nav id="head-nav">
-          <section class="brand">
-              <img src="d.jpeg" alt="">
-              <h1> 
-                Delicacy kitchen
-              </h1>
-              <h3>
-                We serve what you deserve
-              </h3>
-          </section>
-          <section class="topnav">
-              <a href="../index.html" class="active">Home</a>
-              <a href="./manu-page.html">Menu</a>
-              <a href="./booking-page.html">Booking</a>
-              <a href="./feedback.html">Feebacks</a>
-              <a href="./about.html">About</a>
-          </section>   
-      </nav>
-    </header>
-    <!-- <main> -->
-        <div class="main">
-            <p>Thank you for Booking with us!</p>
-            <p> We will reach out to you </p>
-            <iframe class="location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.958857423098!2d-79.38599358482604!3d43.669825479120675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3517c0b3021f%3A0xf230b6fbcc847026!2sHumber%20International%20Graduate%20School!5e0!3m2!1sen!2sca!4v1658681383528!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <br><br>
-            <h3 class="desc"> This is the Location of Delicacy Kitchen </h3>
-            <br><br>
-            <p class="bc1"> Here, you will get the best Delicacy of the food.</p>
-            <br><br>
-            <p class="bc2"> You will reach to us Again to taste the same taste again.</p>
 
-  
-        </div>
-    <!-- </main> -->
-    <footer>
-      Delicacycopyright@2022
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Delicacy kitchen</title>
+  <link rel="stylesheet" href="../styles/style2.css">
+  <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <header>
+    <nav id="head-nav">
+      <section class="brand">
+        <img src="d.jpeg" alt="">
+        <h1>
+          Delicacy kitchen
+        </h1>
+        <h3>
+          We serve what you deserve
+        </h3>
+      </section>
+      <section class="topnav">
+        <a href="../index.html">Home</a>
+        <a href="./manu-page.html">Menu</a>
+        <a href="./booking-page.html" class="active">Booking</a>
+        <a href="./feedback.html">Feebacks</a>
+        <a href="./about.html">About</a>
+      </section>
+    </nav>
+  </header>
+  <!-- <main> -->
+  <div class="main">
+    <p>Thank you for Booking with us!</p>
+    <p> We will reach out to you </p>
+    <section id="bookingDetais" class="bookingDetais">
+      <h4 style="text-align: center;"> Booking Details<h4>
+    </section>
+    <iframe class="location"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.958857423098!2d-79.38599358482604!3d43.669825479120675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3517c0b3021f%3A0xf230b6fbcc847026!2sHumber%20International%20Graduate%20School!5e0!3m2!1sen!2sca!4v1658681383528!5m2!1sen!2sca"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <br><br>
+    <h3 class="desc"> This is the Location of Delicacy Kitchen </h3>
+    <br><br>
+    <p class="bc1"> Here, you will get the best Delicacy of the food.</p>
+    <br><br>
+    <p class="bc2"> You will reach to us Again to taste the same taste again.</p>
+    </section>
+
+
+  </div>
+  <!-- </main> -->
+  <footer>
+    Delicacycopyright@2022
+  </footer>
+</body>
+<script>
+  const getUrlVars = () => {
+    var vars = {};
+    var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function (m, key, value) {
+      vars[key] = value;
+    });
+    console.log(vars)
+    return vars;
+  }
+
+  const createHtml = () => {
+    const vars = getUrlVars();
+    let html = `<p>BookingId: ${Math.random().toString(36).slice(2, 10)} </p>`;
+    html += `<p>Name: ${vars['firstname']} ${vars['lastname']}</p>`;
+    html += `<p>Contact NO.: ${vars['phone']}</p>`;
+    html += `<p>Email: ${vars['email'].replace('%40', '@')}</p>`;
+    html += `<p>Time: ${new Date(vars['datetime'].replace('%3A', ':  '))}</p>`;
+    html += `<p>No. of person: ${vars['nperson']}</p>`;
+    console.log(html)
+    return html;
+  }
+
+  const displayBookingDeatails = () => {
+    document.getElementById("bookingDetais").innerHTML += createHtml();
+  }
+  displayBookingDeatails()
+</script>
+<link rel="stylesheet" href="../styles/booking-conformation.css">
+
 </html>
