--- a/index.html
+++ b/index.html
@@ -1,7 +1,111 @@
-<html>
-    <head>
-        <title>
-            Restaurant 
-        </title>
-    </head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Delicacy Kitchen</title>
+    <link rel="stylesheet" href="styles/style2.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <header>
+        <nav id="head-nav">
+            <section class="brand">
+                <img src="d.jpeg" alt="">
+                <h1> 
+                  Delicacy kitchen
+                </h1>
+                <h3>
+                  We serve what you deserve
+                </h3>
+            </section>
+            <section class="topnav">
+                <a href="./index.html" class="active">Home</a>
+                <a href="./pages/manu-page.html">Menu</a>
+                <a href="./pages/booking-page.html">Booking</a>
+                <a href="./pages/feedback.html">Feebacks</a>
+                <a href="./pages/about.html">About</a>
+            </section>   
+        </nav>
+    </header>
+    <!-- <main> -->
+        <div class="main"><br><br>
+          <h1>WELCOME TO DELICACY KITCHEN</h1>
+          <h6> By Vrushali Ponkia, Jay Savani and Falgun Dudhat</h6>
+          <p>We prepare and serve food and drinks to customers. Meals are generally served and eaten on the premises, but we also offer take-out and dine-in. We include a wide variety of cuisines and services ranging from inexpensive fast-food to mid-priced, to high-priced luxury.</p>
+          <br><br> 
+          <div class="row">
+            <div class="column">
+              <img src="homeimage2.jpeg" onMouseOver="showText('PRAWNS, CHINESE PEOPLES GO TO DISH')" onMouseOut="hide();" style="width:100%; height: 280px;">
+              <div id="text"></div>
+            </div>
+            <div class="column">
+              <img src="homeimage3.jpeg" onMouseOver="showText1('LASAGNA, ITALIAN PEOPLES FAVOURITE GO TO DISH')" onMouseOut="hide1();" style="width:100%; height: 280px;">
+              <div id="text1"></div>
+            </div>
+            <div class="column">
+              <img src="homeimage4.jpeg" onMouseOver="showText2('RICE AND CURRY, INDIANS FAVOURITE GO TO DISH')" onMouseOut="hide2();" style="width:100%; height: 280px;">
+              <div id="text2"></div>
+            </div>
+            <div class="column">
+              <img src="homeimage5.jpeg" onMouseOver="showText3('RAVIOLLI, MAXICANS FAVOURITE GO TO DISH')" onMouseOut="hide3();" style="width:100%; height: 280px;">
+              <div id="text3"></div>
+            </div>
+          </div><br><br>
+          <div class="btn">
+            <button onclick="showcode()">Click to redeem your promo code</button>
+          </div>
+          <h5 id = "code" > </h5>
+        </div>
+    <!-- </main> -->
+<footer>
+    Delicacycopyright@2022
+</footer>
+<script>
+  function showText(text){
+    document.getElementById("text").innerHTML=text;
+  }
+  function hide(){
+    document.getElementById("text").innerHTML="";
+  }
+
+  function showText1(text){
+    document.getElementById("text1").innerHTML=text;
+  }
+  function hide1(){
+    document.getElementById("text1").innerHTML="";
+  }
+
+  function showText2(text){
+    document.getElementById("text2").innerHTML=text;
+  }
+  function hide2(){
+    document.getElementById("text2").innerHTML="";
+  }
+
+  function showText3(text){
+    document.getElementById("text3").innerHTML=text;
+  }
+  function hide3(){
+    document.getElementById("text3").innerHTML="";
+  }
+
+const char ='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+let result = ' ';
+
+function randomCode() {
+    for ( let i = 0; i < 5; i++ ) {
+        result += char.charAt(Math.floor(Math.random() * char.length));
+        console.log(result)
+    }
+}
+console.log(randomCode());
+ 
+function showcode(){
+  document.getElementById("code").innerHTML = result;
+}
+</script>
+  </body>
 </html>
